# Lost-In-The-Forest

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: Animation.h  AnimationData.h  Board.h  CMakeLists.txt  CollisionHandling.h  Controller.h  EventClock.h  GameObject.h  HealthBar.h  Macros.h  Operation.h  Resources.h
include/MoveObjects_Headers/: Arrow.h  Bear.h  Box.h  CMakeLists.txt  Crow.h  Enemy.h  FireArrow.h  MoveObject.h  Player.h  SmartEnemy.h  StoneArrow.h  Wolf.h
include/Screens_Headers/: Button.h  CMakeLists.txt  EndGameScreen.h  GameOverPopUp.h  GameScreen.h  InstructionScreen.h  LodingScreen.h  MenuScreen.h  OptionsScreen.h  ScreenBase.h
include/StaticObjects_Headers/: Block.h  Bonus.h  CMakeLists.txt  Decoration.h  Door.h  ExtraLife.h  Gold.h  Hurricane.h  Key.h  Spike.h  StaticObject.h
include/StaticObjects_Headers/SpecialAbilty_Headers/: CMakeLists.txt  FastMoving.h  FireArrows.h  JumpBoost.h  SpecialAbility.h
resources/: CMakeLists.txt  stage1.txt  stage2.txt  stage3.txt
src/: Animation.cpp  Board.cpp  CMakeLists.txt  CollisionHandling.cpp  Controller.cpp  EventClock.cpp  GameObject.cpp  Resources.cpp  main.cpp
src/CustomObjects_cpp/: Button.cpp  CMakeLists.txt  HealthBar.cpp
src/MoveObjects_cpp/: Arrow.cpp  Bear.cpp  Box.cpp  CMakeLists.txt  Crow.cpp  Enemy.cpp  FireArrow.cpp  MoveObject.cpp  Player.cpp  SmartEnemy.cpp  StoneArrow.cpp  Wolf.cpp
src/Screens_cpp/: CMakeLists.txt  EndGameScreen.cpp  GameOverPopUp.cpp  GameScreen.cpp  InstructionsScreen.cpp  LoadingScreen.cpp  MenuScreen.cpp  OptionsScreen.cpp  ScreenBase.cpp
src/StaticObjects_cpp/: Block.cpp  Bonus.cpp  CMakeLists.txt  Decoration.cpp  Door.cpp  ExtraLife.cpp  FastMoving.cpp  FireArrows.cpp  Gold.cpp  Hurricane.cpp  JumpBoost.cpp  Key.cpp  SpecialAbility.cpp  Spike.cpp  StaticObject.cpp
